
Log
----------------------
* Add new attribute to Log element: trimWhitespace - if true, trim whitespace from start and end of log lines.
  Primarily intended only to force historic "trim" behavior. Defaults to false. (CC-912) Patch by Sebastian Koppehel.

Origo Publisher
----------------------
* Update to use new issue handling API. Patch by Patrick Ruckstuhl.

Rake Builder
----------------------
* Make the Ruby executable and the Rake executable configurable (CC-904). Patch by Florian Gilcher.

Removed deprecated classes
----------------------
* removed CruiseControl (old launch wrapper)
* removed net.sourceforge.cruisecontrol.SelfConfiguringPlugin 
* removed net.sourceforge.cruisecontrol.bootstrappers.CurrentBuildStatusBootstrapper
* removed net.sourceforge.cruisecontrol.bootstrappers.CurrentBuildStatusFTPBootstrapper
* removed net.sourceforge.cruisecontrol.publishers.CurrentBuildStatusPublisher
* removed net.sourceforge.cruisecontrol.publishers.CurrentBuildStatusFTPPublisher

Removed deprecated methods
----------------------
* Main, P4Bootstrapper, Log, ModificationSet 

SVN
----------------------
* SVN externals not parsed correctly where multiple spaces exist as separator (CC-949). Patch by Andy Jacobs.

TwitterPublisher
----------------------
* Add a new plugin for publishing build results to Twitter.

UCM
----------------------
* UCM.java not creating the right command line for describing all activities (CC-886). Reported by Adrien Gracia

Dashboard
======================
* Dashboard build detail page is creating many JMX server threads (CC-831). Reported by Matthias Grunwalde. Diagnosed by Xinglang Wang. Tested by Joe Schmetzer. Unit Tests patched by Stephen Smith.

* Rename AntOutputWidget to BuildOutputWidget and fix to display build output (CC-899). Patch by Joe Schemtzer.

* Remove deprecation warnings about widget api because no replacement api is available and patches are arriving for the existing api. Also restored links to widgets.html.
